--- a/Kotohin/Desktop HTML/Verstka.html
+++ b/Kotohin/Desktop HTML/Verstka.html
@@ -186,12 +186,59 @@
       <div class="logo_group_in_group4">
 
           <img src="../IMAGES\hp-2 logo.svg" alt="лого Hp">
-          <img src="../IMAGES\Group 235.svg" alt="">
+          <img class="img_cross" src="../IMAGES\Group 235.svg" alt="">
           <img src="../IMAGES\Cyberpunk_2077_logo 1.svg" alt="">
 
       </div>
-
+      
   </div>
+
+      <div class="group_1_in_group4">
+
+        <a class="text1_in_group1">
+          Полное погружение вместе с HP
+        </a>
+
+        <a class="text2_in_group1">Погрузись в современные экшен-игры с реалистичным изображением с помощью монитора с диагональю 23,8 дюйма, созданном для отображения максимально насыщенных цветов. Успевай реагировать на любые события с временем отклика 1 мс и частотой в 144 Гц!</a>
+
+        <div class="text_group1">
+
+          <div class="group1_text_group1">
+
+              <img src="../IMAGES\color_lens.svg" alt="">
+
+              <a class="text1_in_group1_text">
+                Яркие насыщенные цвета
+              </a>
+
+          </div>
+          
+          <div class="group2_text_group1">
+
+              <img src="../IMAGES\auto_awesome.svg" alt="">
+
+              <a class="text2_in_group1_text">
+              Кристальная четкость изображения
+              </a>
+
+          </div>
+
+          <div class="group3_text_group1">
+
+            <img src="../IMAGES\auto_awesome_motion.svg" alt="">
+
+            <a class="text3_in_group1_text">
+              Быстрые движения и плавный геймплей
+            </a>
+
+          </div>
+
+        </div>
+
+
+      </div>
+
+  
 
 
  </div>   
