--- a/Kotohin/Desktop HTML/Verstka.html
+++ b/Kotohin/Desktop HTML/Verstka.html
@@ -178,6 +178,7 @@
       <img src="../IMAGES\22 2.png" alt="">
   
   </div>
+<div class="ing_group_and_group1_in_group4 ">
 
   <div class="group_img_in_group4">
 
@@ -235,13 +236,41 @@
 
         </div>
 
+        <div class="group_button">
+          <div class="button">
+            
+            <a class="text_in_button " >
+              Подробнее
+            </a>
+            
+          </div>
+        </div>
 
       </div>
+
+    </div>
+
+
+ </div>   
+
+
+<div class="group_5">
+
+
+
+  <img src="../IMAGES\Untitled-1 1.png" alt="">
+
+  
+
+    <img src="../IMAGES\Untitled-1 1.png" alt="">
+
+  
 
   
 
 
- </div>   
+
+</div>
 
 
 </main>
