--- a/Kotohin/Desktop HTML/Verstka.html
+++ b/Kotohin/Desktop HTML/Verstka.html
@@ -111,31 +111,36 @@
 
                   <div class="mail">
 
+                    <div class="whats_your_mail">
                       <a> 
                         Твой e-mail
                       </a>
-
+                    </div>
                   </div>
 
                   <div class="screenshot">
 
                     <div class="screenshot_button">
                       
-                      <a class="pint_screenhot">
+                      <p class="pint_screenhot">
                       Прикрепить скриншот 
-                      </a>
+                      </p>
 
-                      <a class="format">
+                      <p class="format">
                         .png / .jpg / .pdf
-                      </a>
+                      </p>
 
                     </div>
 
                   </div>
 
-                  <div class="group_button">
+                  <div class="group_button1">
 
-                    <div class="button">
+                    <div class="button1">
+
+                      <a class="text_in_button1">
+                        Отправить 
+                      </a>
 
                     </div>
 
@@ -345,8 +350,8 @@
 
     <div class="text_group">
 
-      <a>Лицензия</a>
-      <a>Политика конфиденциальности</a>
+      <a class="text1">Лицензия</a>
+      <a class="text2">Политика конфиденциальности</a>
 
     </div>
 
